; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/extr_ty.c_XdsDecode.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/extr_ty.c_XdsDecode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@stderr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32*)* @XdsDecode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @XdsDecode(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %18 [
    i32 131, label %8
    i32 130, label %8
    i32 132, label %12
    i32 129, label %16
    i32 128, label %17
  ]

8:                                                ; preds = %2, %2
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @XdsDecodeCurrentFuture(%struct.TYPE_5__* %9, i32* %10)
  br label %19

12:                                               ; preds = %2
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @XdsDecodeChannel(%struct.TYPE_5__* %13, i32* %14)
  br label %19

16:                                               ; preds = %2
  br label %19

17:                                               ; preds = %2
  br label %19

18:                                               ; preds = %2
  br label %19

19:                                               ; preds = %18, %17, %16, %12, %8
  ret void
}

declare dso_local i32 @XdsDecodeCurrentFuture(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @XdsDecodeChannel(%struct.TYPE_5__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
